--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 # environment settings in sites/*.com/settings.php
 /www/sites/default/settings.php
 
+# Ignore environment specific site files (files folder should be moved 
+# to Drupal root, for shared files experience).
+/www/sites/*/files
+/www/sites/*/private
